[gd_scene load_steps=8 format=3 uid="uid://c5sekepb63mku"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_u0nfh"]
[ext_resource type="Texture2D" uid="uid://c5dg23q6ie2ok" path="res://assets/idea space.png" id="2_lww5h"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_iaacu"]
radius = 2.0
height = 7.99999

[sub_resource type="RectangleShape2D" id="RectangleShape2D_16iuu"]
size = Vector2(20, 23)

[sub_resource type="Animation" id="Animation_qkgum"]
resource_name = "idle_front"
length = 0.5
loop_mode = 1
step = 0.1667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1667, 0.3334),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Rect2(114, 81, 11, 14), Rect2(130, 81, 11, 14), Rect2(147, 81, 11, 14)]
}

[sub_resource type="Animation" id="Animation_i4sn3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Rect2(114, 81, 11, 14)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fyx7e"]
_data = {
"RESET": SubResource("Animation_i4sn3"),
"idle_front": SubResource("Animation_qkgum")
}

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource("1_u0nfh")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -7)
texture = ExtResource("2_lww5h")
region_enabled = true
region_rect = Rect2(114, 81, 11, 14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_iaacu")

[node name="Detection" type="Area2D" parent="."]
position = Vector2(0, -52.25)
collision_layer = 16
collision_mask = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detection"]
position = Vector2(0, 46.75)
shape = SubResource("RectangleShape2D_16iuu")

[node name="HandPosition" type="Node2D" parent="."]
position = Vector2(-3, -3)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_fyx7e")
}
autoplay = "idle_front"

[connection signal="area_entered" from="Detection" to="." method="_on_detection_area_entered"]
[connection signal="area_exited" from="Detection" to="." method="_on_detection_area_exited"]
